fix: reduce size to remove scrollbar

--- a/src/components/FormTableCollab/FormTableCollab.scss
+++ b/src/components/FormTableCollab/FormTableCollab.scss
@@ -23,7 +23,7 @@
 .title {
   @include ellipsis();
   display: inline-block;
-  width: 100%;
+  width: 75%;
   padding-right: 20px;
 }
 
